Fix cannot load profile picture

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <table cellspacing="20">
             <tr>
-                <td><img src="/Image/yanisa.png" alt="Yanisa profile picture"></td>
+                <td><img src="Image/yanisa.png" alt="Yanisa profile picture"></td>
                 <td><h1>Yanisa Sangsuwan</h1>
                     <p><em>A <strong>self learner</strong> for creating my own website.</em></p>
                     <p>I am a programmer who is interested in creating a website to show my lifestyle and my journey. I love reading a novel and a cartoon book. </p>
