Add contact details

--- a/contact-me.html
+++ b/contact-me.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <h1>My Contact Details</h1>
-    <p>Address:</p>
-    <p>Phone:</p>
-    <p>Email:</p>
+    <p>Address:Bangkok Thailand</p>
+    <p>Phone:(+66)081-9595897</p>
+    <p>Email:sangsuwanyanisa@gmail.com</p>
     <hr>
     <form action="mailto:sangsuwanyanisa@gmail.com" method="post" enctype="text/plain">
         <label>Your Name:</label>
